# karabo-bridge-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dia/: Class.dia
examples/: CMakeLists.txt
examples/smlt_camera/: camera_client.cpp
examples/vfai/: CMakeLists.txt  README.md
examples/vfai/include/vfai/: vf_config.hpp  vf_image_detector.hpp  vf_line_detector.hpp  vf_view.hpp
examples/vfai/src/: CMakeLists.txt  vf_databroker.cpp  vf_databroker.hpp  vf_datasource_widget.cpp  vf_datasource_widget.hpp  vf_delegate.cpp  vf_delegate.hpp  vf_imageanalysis_widget.cpp  vf_imageanalysis_widget.hpp  vf_imageprocessor.cpp  vf_imageprocessor.hpp  vf_lineanalysis_widget.cpp  vf_lineanalysis_widget.hpp  vf_listmodel.cpp  vf_listmodel.hpp  vf_main.cpp  vf_mainwindow.cpp  vf_mainwindow.hpp  vf_pipeline_data.hpp  vf_sourceitem.cpp  vf_sourceitem.hpp  vf_treemodel.cpp  vf_treemodel.hpp  vf_treeview.cpp  vf_treeview.hpp
examples/vfai/tests/: CMakeLists.txt  test_treemodel.cpp
include/karabo-bridge/: kb_client.hpp  kb_config.hpp  kb_data.hpp
integration_test/: client_for_pysim.cpp
src/dmi/: CMakeLists.txt  README.md
src/dmi/cmake/: downloadOpencv.cmake.in  downloadRxcpp.cmake.in
src/dmi/include/xfai/: area_detector.hpp  line_detector.hpp  view.hpp  xfai_config.hpp
src/dmi/src/: CMakeLists.txt  dmi_main.cpp  dmi_version.cpp.in  dmi_version.hpp
src/dmi/src/gui/: datasource_model.cpp  datasource_model.hpp  datasource_widget.cpp  datasource_widget.hpp  imageanalysis_widget.cpp  imageanalysis_widget.hpp  lineanalysis_widget.cpp  lineanalysis_widget.hpp  mainwindow.cpp  mainwindow.hpp
src/dmi/src/pipeline/: databroker.cpp  databroker.hpp  imageprocessor.cpp  imageprocessor.hpp  pipeline_data.hpp  sourceitem.cpp  sourceitem.hpp
src/dmi/tests/: CMakeLists.txt  test_treemodel.cpp
tests/: test_kbdata.cpp
